<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lang"
            type="String" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_grey12"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/circle_avatar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="22dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_bold"
                    android:text="Happiness Store"
                    android:textColor="@color/black2"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="16dp"
                        android:layout_gravity="center_vertical">

                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:numStars="5"
                            android:rating="3.5"
                            android:theme="@style/RatingBar" />
                    </FrameLayout>

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:id="@+id/llDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="@font/font_regular"
                            android:text="@string/show_offer"
                            android:textColor="@color/colorAccent"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_width="9dp"
                            android:layout_height="9dp"
                            android:layout_gravity="center_vertical"
                            android:rotation='@{lang.equals("ar")?180:0}'
                            android:src="@drawable/ic_left_arrow1"
                            app:tint="@color/color2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/small_rounded_white"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="9dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingTop="8dp"
                >
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/circle_primary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/some_products_are_not_available"
                    android:textColor="@color/black2"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="11dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp"
                >
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/circle_color5"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/there_are_other_brand_to_some_products"
                    android:textColor="@color/black2"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="8dp"
                >
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/circle_color6"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/some_products_have_less_quantities"
                    android:textColor="@color/black2"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="9dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/total_cost"
                    android:textColor="@color/black2"
                    android:textSize="16sp" />

                <androidx.legacy.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/font_bold"
                    android:text="350"
                    android:textColor="@color/black2"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/font_regular"
                    android:text="@string/sar"
                    android:textColor="@color/grey8"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</layout>