<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="contactModel"
            type="com.apps.dbrah.model.ContactUsModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey9"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:background="@drawable/small_rounded_white"
                android:fillViewport="true"
                android:padding="16dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="215dp"
                        android:layout_height="136dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="29dp"
                        android:src="@drawable/contact_us_bg"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="48dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_user2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:fontFamily="@font/font_regular"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/small_rounded_stroke_grey7"
                        android:hint="@string/name"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@={contactModel.name}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/font_regular"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_mail2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:fontFamily="@font/font_regular"
                            android:text="@string/email"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/small_rounded_stroke_grey7"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@={contactModel.email}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/font_regular"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_subject" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:fontFamily="@font/font_regular"
                            android:text="@string/subject"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/small_rounded_stroke_grey7"
                        android:hint="@string/subject"
                        android:lines="1"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@={contactModel.subject}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/font_regular"

                        />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_subject" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginEnd="12dp"
                            android:fontFamily="@font/font_regular"
                            android:text="@string/message"
                            android:textColor="@color/black"
                            android:textSize="15sp" />


                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="114dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/small_rounded_stroke_grey7"
                        android:gravity="top|start"
                        android:hint="@string/message"
                        android:lines="1"
                        android:padding="16dp"
                        android:text="@={contactModel.message}"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:fontFamily="@font/font_regular"

                        />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/btn_small_enabled"
                        android:enabled="@{contactModel.valid,default=false}"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:textSize="16sp"

                        />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@drawable/shadow_top"
                android:alpha=".5"
                />
        </FrameLayout>


    </LinearLayout>


</layout>
